[feature/forum-ui] Add forum components

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@hot-loader/react-dom": "17.0.1",
     "@react-pdf/renderer": "2.0.0",
     "@reduxjs/toolkit": "1.5.1",
+    "@types/faker": "^5.5.6",
     "as-table": "1.0.55",
     "autoprefixer": "10.2.5",
     "axios": "0.21.1",
@@ -52,6 +53,7 @@
     "electron-log": "4.3.2",
     "electron-squirrel-startup": "1.0.0",
     "electron-store": "5.1.1",
+    "faker": "^5.5.3",
     "hex-string": "1.0.3",
     "history": "4.10.1",
     "http": "0.0.1-security",
