--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@hot-loader/react-dom": "17.0.1",
     "@react-pdf/renderer": "2.0.0",
     "@reduxjs/toolkit": "1.5.1",
-    "@types/faker": "^5.5.6",
     "as-table": "1.0.55",
     "autoprefixer": "10.2.5",
     "axios": "0.21.1",
@@ -54,6 +53,7 @@
     "electron-squirrel-startup": "1.0.0",
     "electron-store": "5.1.1",
     "faker": "^5.5.3",
+    "generate-password": "^1.6.0",
     "hex-string": "1.0.3",
     "history": "4.10.1",
     "http": "0.0.1-security",
@@ -119,6 +119,7 @@
     "@types/classnames": "2.2.11",
     "@types/dateformat": "3.0.1",
     "@types/electron-devtools-installer": "2.2.0",
+    "@types/faker": "^5.5.6",
     "@types/ini": "1.3.30",
     "@types/jest": "26.0.22",
     "@types/libsodium-wrappers-sumo": "0.7.5",
